fix bug when adding a CD, some translation and avoid empty collection on homepage

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -42,7 +42,7 @@
     <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
 
     <div class="actions">
-      <%= f.submit "Enregistrer" %>
+      <%= f.submit "Enregistrer",:class=>"btn btn-default"%>
     </div>
 
 <% end %>
