--- a/app/views/cds/new.html.erb
+++ b/app/views/cds/new.html.erb
@@ -1,8 +1,5 @@
-<h1>New cd</h1>
+<h1>Nouveau CD</h1>
 
-----
-<%=@item_collection_id %>
-----
 <%= render 'form' %>
 
 <%= link_to 'Back', cds_path %>
