--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,8 +15,8 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Firstname</th>
+      <th>Nom</th>
+      <th>Prenom</th>
       <th>Pseudo</th>
       <th>Email</th>
       <th>Action</th>
