--- a/app/views/item_collections/_form.html.erb
+++ b/app/views/item_collections/_form.html.erb
@@ -12,19 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name ,"Nom de la collection"%><br>
     <%= f.text_field :name ,:class=>'input form-control'%>
   </div>
   <div class="field">
-    <%= f.label :beginDate %><br>
+    <%= f.label :beginDate ,"Date de début"%><br>
     <%= f.date_select :beginDate ,:start_year=>Date.today.year - 100, :end_year => Time.now.year,:class=>'input form-control'%>
   </div>
 
   <div class="field">
-    <%= f.label "Collection privé" %>
+    <%= f.label :is_private, "Collection privé" %>
     <%= f.check_box :is_private%>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Mettre à jour",:class=>"btn btn-success"%>
   </div>
 <% end %>
