--- a/app/views/item_collections/edit.html.erb
+++ b/app/views/item_collections/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing item_collection</h1>
+<h1>Modification de la collection</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @item_collection %> |
-<%= link_to 'Back', item_collections_path %>
