--- a/app/views/item_collections/index.html.erb
+++ b/app/views/item_collections/index.html.erb
@@ -12,9 +12,9 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Begindate</th>
-      <th>User</th>
+      <th>Nom de la collection</th>
+      <th>Date de début</th>
+      <th>propriétaire</th>
       <th colspan="3">Action</th>
     </tr>
   </thead>
