--- a/app/views/item_collections/show.html.erb
+++ b/app/views/item_collections/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'Modifier la collection', edit_item_collection_path(@item_collection) , :class => 'btn btn-success'%>
+<% if @cds.nil? || @cds.size == 0 %>
+    <h4>Aucun élément présent dans cette collection</h4>
+<%end%>
+    <%= link_to 'Ajouter un CD', new_cd_path(:item_collection => @item_collection), :class => 'btn btn-success' %>
 <%= render :template => "layouts/timeline" %>
 
-<%= link_to 'Edit', edit_item_collection_path(@item_collection) %> |
-<%= link_to 'Back', item_collections_path %>
