change css for error in forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
   </div>
 </nav>
 
-<div class="container" role="main">
+<div class="container" role="main" id="main-container">
 
   <%= flash_messages %>
 
