--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,3 +66,11 @@ a.btn-success, a.btn-primary {
 a:hover {
     background-color: transparent;
 }
+
+.field_with_errors {
+    background-color: #ffffff !important;
+}
+
+.field_with_errors > input {
+    border: 3px solid #B94A48 !important;
+}
