--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@cd, html: {multipart: true}) do |f| %>
     <% if @cd.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@cd.errors.count, "error") %> prohibited this cd from being saved:</h2>
-
+        <div class="alert alert-danger alert-block">
+          <button type="button" class="close" data-dismiss="alert">x</button>
+          <h4><%= pluralize(@cd.errors.count, "error") %> prohibited this cd from being saved:</h4>
           <ul>
             <% @cd.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
@@ -42,7 +42,7 @@
     <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
 
     <div class="actions">
-      <%= f.submit "Enregistrer",:class=>"btn btn-default"%>
+      <%= f.submit "Enregistrer", :class => "btn btn-default" %>
     </div>
 
 <% end %>
