fixed timeline design for empty collection and masked the link on user profil if collection is private

--- a/app/views/item_collections/show.html.erb
+++ b/app/views/item_collections/show.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
+<%if current_user.id == @item_collection.user_id%>
 <%= link_to 'Modifier la collection', edit_item_collection_path(@item_collection) , :class => 'btn btn-success'%>
-<% if @cds.nil? || @cds.size == 0 %>
-    <h4>Aucun élément présent dans cette collection</h4>
-<%end%>
     <%= link_to 'Ajouter un CD', new_cd_path(:item_collection => @item_collection), :class => 'btn btn-success' %>
+<%end%>
 <%= render :template => "layouts/timeline" %>
 
