fixed issue in timeline when no collection was show

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1 class="text-center">Collection de <%=@collection_owner_pseudo%></h1>
-
+<%unless @collection_item.nil?%>
 <%= render template: "layouts/timeline" %>
+<%end%>
