Edit description in edit cd, show it in show, and fix item_collection_id when editing cd

--- a/app/views/cds/show.html.erb
+++ b/app/views/cds/show.html.erb
@@ -32,6 +32,13 @@
       <strong>Date d'achat:</strong>
       <%= @cd.purchaseDate %>
     </p>
+    
+    <% unless @cd.description.blank? %>
+      <p>
+        <strong>Description:</strong>
+        <%= @cd.description %>
+      </p>
+    <% end %>
 
     <%= link_to 'Edit', edit_cd_path(@cd) %>
   </div>
