--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -28,19 +28,24 @@
       <%= f.number_field :year, :class => 'input form-control' %>
     </div>
     <div class="field">
-      <%= f.label "Style: " %><br>
+      <%= f.label "Genre: " %><br>
       <%= f.text_field :gender, :class => 'input form-control' %>
     </div>
     <div class="field">
-      <%= f.label :purchaseDate %><br>
+      <%= f.label "Description: " %><br>
+      <%= f.text_area :description, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label "Date d'achat" %><br>
       <%= f.date_select :purchaseDate, :start_year => Date.today.year - 100, :end_year => Time.now.year, :class => 'input form-control' %>
     </div>
     <div class="field">
       <%= f.file_field :image %>
     </div><br>
 
-    <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
-
+    <% unless @item_collection_id.blank? %>
+      <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
+    <% end %>
     <div class="actions">
       <%= f.submit "Enregistrer", :class => "btn btn-default" %>
     </div>
