add button and link

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -13,7 +13,7 @@
 
     <div class="field">
       <%= f.label "Nom de l'album: " %><br>
-      <%= f.text_field :name, :class => 'input form-control' %>
+      <%= f.text_field :name, :class => 'input form-control', :autofocus => true %>
     </div>
     <div class="field">
       <%= f.label "Artiste: " %><br>
