--- a/app/views/cds/show.html.erb
+++ b/app/views/cds/show.html.erb
@@ -1,8 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @cd.name %></h1>
+<h1>
+  <%= @cd.name %>
+  <%= link_to edit_cd_path(@cd), :class=>"btn btn-default" do%>
+    <i class="glyphicon glyphicon-edit black"></i>
+  <% end %>
+</h1>
 
-<div class="contains">
+<div class="container">
   <div class="col-md-4">
     <%= image_tag(@cd.image.url(:large), :class => 'cover-image') %>
   </div>
@@ -24,7 +29,7 @@
     </p>
 
     <p>
-      <strong>Style:</strong>
+      <strong>Genre</strong>
       <%= @cd.gender %>
     </p>
 
@@ -40,10 +45,9 @@
       </p>
     <% end %>
 
-    <%= link_to 'Edit', edit_cd_path(@cd) %>
   </div>
 </div>
 
-<div class="col-md-12">
-  <%= render :template => 'tracks/index' %>
+<div class="col-md-6">
+  <%= render :template => 'tracks/index'%>
 </div>
