--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -22,11 +22,11 @@
 
   <div class="field">
     <%= f.label "Titre" %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :autofocus => true%>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enregistrer",:class=>"btn btn-success"%>
   </div>
 
 <% end %>
