--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -74,3 +74,7 @@ a:hover {
 .field_with_errors > input {
     border: 3px solid #B94A48 !important;
 }
+
+#profile-button-action td {
+    padding-right: 15px;
+}
