Clean project and delete death route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,9 @@
   <%= yield %>
 </div>
 
-<div id="footer" class="footer">
+<div id="footer" class="footer text-center">
   <div class="container">
-    <p>Awesome site made by Stéphane Eicher, Gary Marigliano and Lucien Moor for HE-ARC</p>
+    <p>An awesome site made by Stéphane Eicher, Gary Marigliano and Lucien Moor for HE-ARC</p>
   </div>
 </div>
 
