--- a/app/views/cds/edit.html.erb
+++ b/app/views/cds/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="contains">
   <div class="col-md-4 cover-image">
-    <%= link_to image_tag(@cd.image.url(:large)), @cd.image.url, :class => 'cover-image' %>
+    <%=image_tag (@cd.image.url(:large)), :class => 'cover-image' %>
   </div>
 
   <div class="col-md-8">
