--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing track</h1>
+<h1>Modification</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', [@track.cd, @track] %> |
-<%= link_to 'Back', @track.cd %>
