--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -43,11 +43,9 @@
       <%= f.file_field :image %>
     </div><br>
 
-    <% unless @item_collection_id.blank? %>
-      <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
-    <% end %>
-    <div class="actions">
-      <%= f.submit "Enregistrer", :class => "btn btn-default" %>
-    </div>
+    <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
 
+    <div class="actions">
+      <%= f.submit "Enregistrer", :class => "btn btn-success" %>
+    </div>
 <% end %>
