--- a/app/views/layouts/navbar/account.html.erb
+++ b/app/views/layouts/navbar/account.html.erb
@@ -1,12 +1,12 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     <% if user_signed_in? %>
-    <%= current_user.pseudo %>
-  <%end %>
-  <span class="caret"></span></a>
+        <%= current_user.pseudo %>
+    <% end %>
+    <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
-    <li><%=link_to "Mon compte", user_path(current_user)%></li>
-    <li><%=link_to "Ma collection", item_collection_path(userCollection(current_user.id))%></li>
+    <li><%= link_to "Mon compte", user_path(current_user) %></li>
+    <li><%= link_to "Ma collection", item_collection_path(get_user_default_collection(current_user.id)) %></li>
     <li><%= link_to('Se déconnecter', destroy_user_session_path, :method => :delete) %></li>
   </ul>
 </li>
