--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,44 +1,46 @@
 <h1>
-  <%= pluralize(@cd.tracks.size,"Piste") %>
-  <%= link_to new_cd_track_path(@cd) , :class=>"btn btn-default" do%>
-    <i class="glyphicon glyphicon-plus black"></i>
+  <%= pluralize(@cd.tracks.size, "Piste") %>
+  <% if is_cd_owner(@cd) %>
+      <%= link_to new_cd_track_path(@cd), :class => "btn btn-default" do %>
+          <i class="glyphicon glyphicon-plus black"></i>
+      <% end %>
   <% end %>
 </h1>
 
 
 
 <% if @cd.tracks.empty? %>
-  <p>Vous n'avez encore aucune piste</p>
+    <p>Vous n'avez encore aucune piste</p>
 <% else %>
-  <table class="table table-hover">
-    <thead>
+    <table class="table table-hover">
+      <thead>
 
       <tr>
         <th>#</th>
         <th>Titre</th>
-        
+
         <th colspan="3"></th>
       </tr>
-    </thead>
+      </thead>
 
-    <tbody>
+      <tbody>
       <% @tracks.each do |track| %>
-        <tr>
-          <td><%= track.track_number %></td>
-          <td><%= track.title %></td>
-          <td class="text-right">
-            <%= link_to edit_cd_track_path(track.cd_id, track) do %>
-              <i class="glyphicon glyphicon-edit black"></i>
-            <% end %>
+          <tr>
+            <td><%= track.track_number %></td>
+            <td><%= track.title %></td>
+            <td class="text-right">
+              <%= link_to edit_cd_track_path(track.cd_id, track) do %>
+                  <i class="glyphicon glyphicon-edit black"></i>
+              <% end %>
 
-            <%= link_to cd_track_path(track.cd_id, track), method: :delete, data: { confirm: 'Are you sure?' } do %>
-              <i class="glyphicon glyphicon-trash black"></i>
-            <% end %>
-          </td>
-        </tr>
+              <%= link_to cd_track_path(track.cd_id, track), method: :delete, data: {confirm: 'Are you sure?'} do %>
+                  <i class="glyphicon glyphicon-trash black"></i>
+              <% end %>
+            </td>
+          </tr>
       <% end %>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
 <% end %>
 
 
