--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,5 +1,10 @@
 <h1>
-  <%= pluralize(@cd.tracks.size, "Piste") %>
+  <% if @cd.tracks.blank? %>
+      Piste
+  <% else %>
+      <%= pluralize(@cd.tracks.size, "Piste") %>
+  <% end %>
+
   <% if is_cd_owner(@cd) %>
       <%= link_to new_cd_track_path(@cd), :class => "btn btn-default" do %>
           <i class="glyphicon glyphicon-plus black"></i>
