--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bienvenue <%= @email %>!</p>
 
 <p>Vous pouvez confirmer votre compte mail avec le lien ci-dessous :</p>
 
