--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
     <div class="field">
       <%= f.label "Date de naissance" %><br>
-      <%= f.date_select :birthdate, default: -20.years.from_now, :start_year => Date.today.year - 100, :end_year => Time.now.year%>
+      <%= f.date_select :birthdate, default: -20.years.from_now, :start_year => Date.today.year - 100, :end_year => Time.now.year %>
     </div>
 
     <div class="field">
@@ -31,7 +31,7 @@
     <div class="field">
       <%= f.label :password %>
       <% if @validatable %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em>(<%= @minimum_password_length %> caractères minimums)</em>
       <% end %><br/>
       <%= f.password_field :password, autocomplete: "off", :class => 'input form-control', :placeholder => "mot de passe", :validate => true %>
     </div>
