--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -14,7 +14,7 @@
 
 
 <% if @cd.tracks.empty? %>
-    <p>Vous n'avez encore aucune piste</p>
+    <p>Aucune piste ajoutée pour cet album</p>
 <% else %>
     <table class="table table-hover">
       <thead>
