--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>!</p>
 
 <p>Quelqu'un a demandé de changer votre mot de passe. Vous pouvez le faire avec le lien ci-dessous :</p>
 
