--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,37 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Modification de <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true,:class=>'input form-control' %>
-  </div>
+    <div class="field">
+      <%= f.label "Adresse email" %><br/>
+      <%= f.email_field :email, autofocus: true, :class => 'input form-control' %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off",:class=>'input form-control' %>
-  </div>
+    <div class="field">
+      <%= f.label "Mot de passe" %> <i>(Laisser vide si vous ne souhaitez pas le changer)</i><br/>
+      <%= f.password_field :password, autocomplete: "off", :class => 'input form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" ,:class=>'input form-control'%>
-  </div>
+    <div class="field">
+      <%= f.label "Confirmation du nouveau mot de passe" %><br/>
+      <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'input form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" ,:class=>'input form-control'%>
-  </div>
+    <div class="field">
+      <%= f.label "Mot de passe actuel" %>
+      <i>(Nous avons besoin de votre mot de passe actuel pour confirmer vos changements)</i><br/>
+      <%= f.password_field :current_password, autocomplete: "off", :class => 'input form-control' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Update", :class=>"btn btn-success"%>
-  </div>
+    <div class="actions">
+      <%= f.submit "Mettre à jour", :class => "btn btn-success" %>
+    </div>
 <% end %>
 <p>
-<%= button_to "Supprimer mon compte", registration_path(resource_name), :class=>"btn btn-danger" ,data: { confirm: "Etes-vous sûr?" }, method: :delete %>
-</p>
-<p>
-<%= link_to "retour", :back , :class=>"btn btn-default"%>
+  <%= button_to "Supprimer mon compte", registration_path(resource_name), :class => "btn btn-danger", data: {confirm: "Etes-vous sûr?"}, method: :delete %>
 </p>
