--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,29 +1,33 @@
-<p><%- if controller_name != 'sessions' %>
-<%= link_to "se connecter", new_session_path(resource_name),:class=>"btn btn-default" %><br />
-<% end -%>
+<p>
+  <%- if controller_name != 'sessions' %>
+      <%= link_to "Se connecter", new_session_path(resource_name), :class => "btn btn-default" %><br/>
+  <% end -%>
 </p>
 <p>
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-<%= link_to "s'enregistrer", new_registration_path(resource_name),:class=>"btn btn-default" %><br />
-<% end -%>
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+      <%= link_to "S'enregistrer", new_registration_path(resource_name), :class => "btn btn-default" %><br/>
+  <% end -%>
 </p>
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-<%= link_to "mot de passe oublié?", new_password_path(resource_name),:class=>"btn btn-default" %><br />
+    <%= link_to "Mot de passe oublié?", new_password_path(resource_name), :class => "btn btn-default" %><br/>
 <% end -%>
 <p>
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-<%= link_to "pas reçu les instructions de confirmation?", new_confirmation_path(resource_name),:class=>"btn btn-default" %><br />
-<% end -%>
-</p>
-  <p>
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-<%= link_to "pas reçu les instructions de debloquage?", new_unlock_path(resource_name),:class=>"btn btn-default" %><br />
-<% end -%>
-</p>
-  <p>
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-<%= link_to "Se connecter avec #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider),:class=>"btn btn-default" %><br />
+  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+      <%= link_to "Pas reçu les instructions de confirmation?", new_confirmation_path(resource_name), :class => "btn btn-default" %>
+      <br/>
   <% end -%>
-<% end -%>
-  </p>
+</p>
+<p>
+  <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+      <%= link_to "Pas reçu les instructions de debloquage?", new_unlock_path(resource_name), :class => "btn btn-default" %>
+      <br/>
+  <% end -%>
+</p>
+<p>
+  <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+          <%= link_to "Se connecter avec #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), :class => "btn btn-default" %>
+          <br/>
+      <% end -%>
+  <% end -%>
+</p>
