--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
-<h1 class="text-center">Collection de <%=@collection_owner_pseudo%></h1>
-<%unless @collection_item.nil?%>
-<%= render template: "layouts/timeline" %>
-<%end%>
+<h1 class="text-center">Découvrez une collection au hasard !</h1>
+<h4 class="text-right text-info">Collection de <%= @collection_owner_pseudo %></h4>
+<% unless @collection_item.nil? %>
+    <%= render template: "layouts/timeline" %>
+<% end %>
